# TopBot

./: .gitignore  LICENSE  README.md  README_CONFIG.md  data_sources_config.yaml.example  main.py  pyproject.toml  requirements.txt  setup.py
docs/: README.md  multi_source_config.md
examples/: basic_usage.py  config_file_usage.py  multi_source_usage.py
peak_valley_detector/: __init__.py  config.py
peak_valley_detector/core/: __init__.py  changepoint_detector.py  score_driven_bocpd.py
peak_valley_detector/data/: __init__.py  fetcher.py  sources.py
peak_valley_detector/utils/: __init__.py
peak_valley_detector/visualization/: __init__.py  visualizer.py
tests/: test_core.py
