[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peak-valley-detector"
version = "2.0.0"
description = "基于严谨 Score-Driven BOCPD 方法的多层次股票峰谷检测系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant", email = "assistant@ai.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "akshare",
    "pandas",
    "numpy",
    "scipy",
    "matplotlib",
    "ta",
    "ruptures",
    "filterpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=5.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]

[project.scripts]
peak-valley-detector = "peak_valley_detector.main:main"

[project.urls]
Homepage = "https://github.com/example/peak-valley-detector"
Repository = "https://github.com/example/peak-valley-detector"
Documentation = "https://peak-valley-detector.readthedocs.io/"
"Bug Reports" = "https://github.com/example/peak-valley-detector/issues"

[tool.setuptools.packages.find]
include = ["peak_valley_detector*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=peak_valley_detector --cov-report=term-missing"
